--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "playwright": "^1.58.2",
+    "xlsx": "^0.18.5",
     "zod": "^4.3.6"
   }
 }
